src/parser/parser.py
from lexer.token import Token
from lexer.token_types import TokenType


class ParserError(Exception):
    """Raised when a syntax error is encountered during parsing."""
    pass


class Parser:
    """Recursive-descent parser skeleton for C-like syntax checking.

    Usage:
        parser = Parser(tokens)
        parser.parse_program()  # raises ParserError on syntax error
    """

    def __init__(self, tokens: list[Token]):
        # Keep all tokens, but parser methods should *skip* comments/whitespace/newlines.
        self.tokens = tokens
        self.pos = 0

    # --- Core helpers -----------------------------------------------------

    def _is_trivia(self, token: Token) -> bool:
        return token.type in {
            TokenType.COMMENT,
            TokenType.WHITESPACE,
            TokenType.NEWLINE,
        }

    def _skip_trivia(self) -> None:
        while self.pos < len(self.tokens) and self._is_trivia(self.tokens[self.pos]):
            self.pos += 1

    def peek(self) -> Token | None:
        """Return current non-trivia token without consuming it, or None at end."""
        self._skip_trivia()
        if self.pos < len(self.tokens):
            return self.tokens[self.pos]
        return None

    def advance(self) -> Token | None:
        """Consume and return current non-trivia token, or None at end."""
        tok = self.peek()
        if tok is not None:
            # peek() already skipped trivia and positioned on a real token
            self.pos += 1
        return tok

    def expect(self, type_: TokenType | None = None, lexeme: str | None = None) -> Token:
        """Consume one token and validate type and/or lexeme.
        - If type_ is not None: token.type must equal it.
        - If lexeme is not None: token.value must equal it.
        """
        tok = self.peek()
        if tok is None:
            raise ParserError("Unexpected end of input")

        if type_ is not None and tok.type is not type_:
            raise ParserError(f"Expected token type {type_.name}, got {tok.type.name} ({tok.value!r})")

        if lexeme is not None and tok.value != lexeme:
            raise ParserError(f"Expected '{lexeme}', got {tok.value!r}")

        self.pos += 1
        return tok

    # --- Grammar entry point ----------------------------------------------

    def parse_program(self) -> None:
        """Entry point: Program → DeclList (for now, just consume tokens).

        This is intentionally minimal. You will progressively replace the
        body with calls to the real grammar methods (parse_decl_list, etc.).
        """
        # TODO: implement according to your grammar, e.g.:
        #   self.parse_decl_list()
        #   self.expect_eof()
        # For now, just verify that there is at least one token.
        if self.peek() is None:
            # Empty input is considered an error for now
            raise ParserError("Empty input: no tokens to parse")
        tok = self.peek()
        if tok is not None and tok.type == TokenType.KEYWORD and tok.value in {"int" , "float", "void"}:
            self.parse_decl_list()
        else :
            raise ParserError(f"Unexpected token {tok.value!r} of type {tok.type.name}")
        

    def expect_eof(self) -> None:
        """Ensure there are no remaining non-trivia tokens."""
        if self.peek() is not None:
            tok = self.peek()
            raise ParserError(f"Unexpected extra token {tok.value!r} of type {tok.type.name}")

    # --- Placeholders for grammar rules -----------------------------------
    # Below are stubs you can fill in based on the agreed grammar.

    # Program        → DeclList EOF
    def parse_decl_list(self) -> None:
        tok = self.peek()
        #base case 
        if tok is None:
            return
        if tok is not None and tok.type == TokenType.KEYWORD and tok.value in {"int" , "float", "void"}:
            self.parse_decl()
            self.parse_decl_list()
        else:
            raise ParserError("Syntax error")
    # Decl           → VarDecl | FunDecl
    def parse_decl(self) -> None:
        tok = self.peek()
        if tok is not None and tok.type == TokenType.KEYWORD and tok.value in {"int" , "float", "void"}:
            #lookahead to decide between VarDecl and FunDecl
            self.parse_type_spec()
            id_token = self.expect(TokenType.IDENTIFIER)
            next_token = self.peek()
            if next_token is not None and next_token.value == '(':
                # Function declaration
                self.expect(lexeme='(')
                self.parse_param_list()
                self.expect(lexeme=')')
                self.parse_compound_stmt()
            else:
                # Variable declaration
                self.parse_var_decl_tail()
                self.expect(lexeme=';')
        else:
            raise ParserError("Syntax error in declaration")

    # VarDecl        → TypeSpec ID VarDeclTail ';'
    def parse_var_decl_tail(self) -> None:
        tok = self.peek()
        if tok is not None and tok.value == ';':
            return 
        self.expect(lexeme=',')
        self.expect(TokenType.IDENTIFIER)
        self.parse_var_decl_tail()
    # ParamList      → (TypeSpec ID (',' TypeSpec ID)*)?
    def parse_param_list(self) -> None:
        tok = self.peek()
        if tok is not None and ((tok.type == TokenType.KEYWORD and tok.value == "void") or tok.value == ')'):
            if tok.value == "void":
                self.advance()
            return
        if tok is not None and tok.type == TokenType.KEYWORD and tok.value in {"int" , "float"}:
            self.parse_type_spec()
            self.expect(TokenType.IDENTIFIER)
            self.parse_param_list_tail()
        else:
            raise ParserError("Syntax error")
    def parse_param_list_tail(self) -> None:
        tok = self.peek()
        if tok is not None and tok.value == ')':
            return
        self.expect(lexeme=',')
        self.parse_type_spec()
        self.expect(TokenType.IDENTIFIER)
        self.parse_param_list_tail()
    def parse_type_spec(self) -> None:
        tok = self.peek()
        if tok is not None and tok.type == TokenType.KEYWORD and tok.value in {"int" , "float", "void"}:
            self.advance()
        else:
            raise ParserError("Syntax error")
    # CompoundStmt   → '{' LocalDeclList StmtList '}'
    def parse_compound_stmt(self) -> None:
        raise NotImplementedError("parse_compound_stmt not implemented yet")

    # ================= LAST 10 FUNCTIONS =================
    
    # 1. RelOp → < | <= | > | >= | == | !=
    def parse_rel_op(self) -> str:
        tok = self.peek()
        if tok is None:
            raise ParserError('error')
        
        valid_ops = {'<', '<=', '>', '>=', '==', '!='}
        if tok.value in valid_ops:
            self.advance()
            return tok.value
        else:
            raise ParserError('error')
    
    # 2. AddExpr → Term AddExprTail
    def parse_add_expr(self) -> None:
        
        self.parse_term()
        self.parse_add_expr_tail()
    
    # 3. AddExprTail → + Term AddExprTail | - Term AddExprTail | ε
    def parse_add_expr_tail(self) -> None:
        
        tok = self.peek()
        if tok is None:
            return  # ε case
        
        if tok.value == '+':
            self.advance()  # consume '+'
            self.parse_term()
            self.parse_add_expr_tail()  # recursive call for more operations
        elif tok.value == '-':
            self.advance()  # consume '-'
            self.parse_term()
            self.parse_add_expr_tail()  # recursive call for more operations
        # else: ε case (no + or -)
    
    # 4. Term → Factor TermTail
    def parse_term(self) -> None:
        
        self.parse_factor()
        self.parse_term_tail()
    
    # 5. TermTail → * Factor TermTail | / Factor TermTail | ε
    def parse_term_tail(self) -> None:
        
        tok = self.peek()
        if tok is None:
            return  # ε case
        
        if tok.value == '*':
            self.advance()  # consume '*'
            self.parse_factor()
            self.parse_term_tail()  # recursive call for more operations
        elif tok.value == '/':
            self.advance()  # consume '/'
            self.parse_factor()
            self.parse_term_tail()  # recursive call for more operations
        # else: ε case (no * or /)
    
    # 6. Factor → ( Expr ) | ID FactorTail | Literal
    def parse_factor(self) -> None:
        
        tok = self.peek()
        if tok is None:
            raise ParserError("Unexpected end of input while parsing factor")
        
        if tok.value == '(':
            self.advance()  # consume '('
            self.parse_expr()  # parse the expression inside parentheses
            self.expect(lexeme=')')  # consume ')'
        elif tok.type == TokenType.IDENTIFIER:
            self.advance()  # consume the identifier
            self.parse_factor_tail()  # check for function call
        elif tok.type in {TokenType.INT_CONST, TokenType.FLOAT_CONST}:
            self.parse_literal()
        else:
            raise ParserError(
                f"Expected factor (literal, identifier, or '('), got {tok.value!r}")
    
    # 7. FactorTail → ( ArgList ) | ε
    def parse_factor_tail(self) -> None:
        
        tok = self.peek()
        if tok is None:
            return  # ε case (end of input)
        
        if tok.value == '(':
            self.advance()  # consume '('
            self.parse_arg_list()  # parse the argument list
            self.expect(lexeme=')')  # consume ')'
        # else: ε case (not a function call, just a variable)
    
    # 8. ArgList → Expr ArgListTail | ε
    def parse_arg_list(self) -> None:
        
        tok = self.peek()
        if tok is None or tok.value == ')':
            return  # ε case (empty argument list)
        
        self.parse_expr()  # parse first expression
        self.parse_arg_list_tail()  # parse remaining arguments
    
    # 9. ArgListTail → , Expr ArgListTail | ε
    def parse_arg_list_tail(self) -> None:
        
        tok = self.peek()
        if tok is None or tok.value == ')':
            return  # ε case (no more arguments)
        
        if tok.value == ',':
            self.advance()  # consume ','
            self.parse_expr()  # parse next expression
            self.parse_arg_list_tail()  # recursive call for more arguments
        else:
            raise ParserError(f"Expected ',' or ')' in argument list, got {tok.value!r}")
    
    # 10. Literal → INT_CONST | FLOAT_CONST
    def parse_literal(self) -> None:
        
        tok = self.peek()
        if tok is None:
            raise ParserError('Error ')
        
        if tok.type == TokenType.INT_CONST or tok.type == TokenType.FLOAT_CONST:
            self.advance()  # consume the literal
        else:
            raise ParserError('Error')
    